--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
+        <div class="welcome" id="welcomeMessage"></div>
         <nav>
             <a href="index.html">Home</a>
             <a href="signup.html">Sign Up</a>
@@ -31,7 +34,7 @@
     <p>Already have an account? <a href="login.html">Log in here</a></p>
 
     <script>
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
+        document.getElementById('signupForm').addEventListener('submit', function (event) {
             event.preventDefault();
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
@@ -61,12 +64,22 @@
             }
         });
 
-        document.getElementById('logoutLink').addEventListener('click', function(event) {
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
             event.preventDefault();
             localStorage.removeItem('currentUser');
             alert('You have been logged out.');
             window.location.href = 'login.html';
         });
+
+        // Display welcome message if user is logged in
+        const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+        if (currentUser) {
+            document.getElementById('welcomeMessage').textContent = 'Welcome, ' + currentUser.username + '!';
+        }
+        else {
+            document.getElementById('welcomeMessage').textContent = 'Welcome';
+        }
     </script>
 </body>
+
 </html>
