--- a/game.html
+++ b/game.html
@@ -5,23 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Basic styles for the game */
-        #gameContainer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin-top: 20px;
-        }
-        #gameCanvas {
-            border: 2px solid #000;
-            background-color: #f0f0f0;
-        }
-    </style>
 </head>
 <body>
     <header>
+        <div class="welcome" id="welcomeMessage"></div>
         <nav>
             <a href="index.html">Home</a>
             <a href="signup.html">Sign Up</a>
@@ -34,6 +21,7 @@
 
     <h1>Endless Runner Game</h1>
     <div id="gameContainer">
+        <h1>Endless Runner Game</h1>
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <p>Your current score: <span id="currentScore">0</span></p>
         <button onclick="endGame()">End Game</button>
@@ -195,6 +183,15 @@
             alert('You have been logged out.');
             window.location.href = 'login.html';
         });
+
+        // Display welcome message if user is logged in
+        const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+        if (currentUser) {
+            document.getElementById('welcomeMessage').textContent = 'Welcome, ' + currentUser.username + '!';
+        }
+        else{
+            document.getElementById('welcomeMessage').textContent = 'Welcome';
+        }
     </script>
 </body>
 </html>
